# tcowl_game

./: .gitignore  CMakeLists.txt  README.md
res/: client.json  config.json  debug.json  local.json  server.json  start - client.bat  start - local.bat  start - server.bat  start.bat
res/biom/earth/: script.lua
res/biom/grass/: definition.json
res/entity/barrel/: definition.json
res/entity/bigstone/: definition.json  graphic.ase
res/entity/button/: definition.json
res/entity/human/: definition.json  graphic.ase  human.json  script.lua
res/entity/lizzard/: script.lua
res/entity/stone/: definition.json  graphic.ase  script.lua
res/lua-lib/tcowl/: config.lua
res/system/: battle.ase  inventory.ase
res/tile/earth/: definition.json
res/tile/grass/: definition.json  graphic.ase
src/: The Commemoration of White Light.cbp  main.cpp  resource.rc  sdl_init.cpp  sdl_init.h
src/engine/: camera.cpp  camera.h  camera.hpp  config.cpp  config.h  entity.cpp  entity.h  font.cpp  font.h  font.hpp  graphic.cpp  graphic.h  graphic.hpp  helper.cpp  helper.h  helper.hpp  helper_json.cpp  helper_json.h  helper_json.hpp  image.cpp  image.h  image.hpp  input.cpp  input.h  input.hpp  input_keyboard.cpp  input_keyboard.h  input_keyboard.hpp  json.cpp  json.h  json.hpp  log.cpp  log.h  log.hpp  network_ids.h  network_ids.hpp  noise.cpp  noise.h  noise.hpp  script.cpp  (+11 more)
src/engine/collision/: body.cpp  collision.h
src/engine/entity/: action.hpp  entity.cpp  entity.h  entity.hpp  inventory.cpp  inventory.hpp  type.cpp  type.h  type.hpp
src/engine/graphic/: camera.cpp  font.cpp  font.hpp  graphic.cpp  graphic.hpp  image.cpp  image.hpp
src/engine/input/: input.cpp  input.hpp  input_keyboard.cpp  input_keyboard.hpp
src/engine/physic/: body.cpp  body.h  body.hpp  collision.cpp  hub.cpp  hub.h  hub.hpp  shape.cpp  shape.h  shape.hpp
src/engine/script/: entity_script.cpp  entity_script.h  (+7 more)
src/game/: app.cpp  app.h  app.hpp  lobby.cpp  lobby.h  player.cpp  player.h  player.hpp
src/network/: client_connection.cpp  client_connection.h  client_connection.hpp  network.cpp  network.h  network.hpp  server.cpp  server.h  server.hpp
(+69 files in other folders)
